<resources>
    <string name="app_name">Agenda from Alura</string>
    <string name="fab_content_description">Add new student button</string>
    <string name="hint_form_name">Nome</string>
    <string name="hint_form_phone">Telefone</string>
    <string name="hint_form_email">E-mail</string>
    <string name="hint_form_submit">Salvar</string>
    <string name="testing_scrollview">Testing ScrollView</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="do_nothing">Do nothing</string>


</resources>